--- a/src/client/js/Panels/SplitPanel/styles/SplitPanel.css
+++ b/src/client/js/Panels/SplitPanel/styles/SplitPanel.css
@@ -4,51 +4,65 @@
  * Author: Robert Kereskenyi
  */
 ul.split-panel-dropdown-list {
-  min-width: 205px; }
-  ul.split-panel-dropdown-list a.dropdown-list-button {
-    padding-left: 10px; }
-    ul.split-panel-dropdown-list a.dropdown-list-button .split-panel-dropdown-icon {
-      float: left;
-      margin-right: 8px;
-      margin-top: 2px; }
+  min-width: 205px;
+}
+ul.split-panel-dropdown-list a.dropdown-list-button {
+  padding-left: 10px;
+}
+ul.split-panel-dropdown-list a.dropdown-list-button .split-panel-dropdown-icon {
+  float: left;
+  margin-right: 8px;
+  margin-top: 2px;
+}
 
 .split-panel {
   position: absolute;
   top: 0;
   left: 0;
-  margin: 0; }
-  .split-panel .split-panel-panel-container {
-    position: absolute;
-    overflow: hidden; }
-    .split-panel .split-panel-panel-container .split-panel-toolbar {
-      position: absolute;
-      right: 0;
-      top: 0;
-      width: 40px;
-      height: 40px;
-      z-index: 999999;
-      padding-top: 2px;
-      padding-right: 3px; }
-      .split-panel .split-panel-panel-container .split-panel-toolbar .split-panel-toolbar-btn {
-        position: relative;
-        float: right;
-        border-radius: 50%;
-        color: #00235b;
-        background-color: #fff;
-        border: 6px solid #fff;
-        opacity: 0.75;
-        cursor: pointer; }
-        .split-panel .split-panel-panel-container .split-panel-toolbar .split-panel-toolbar-btn:hover {
-          opacity: 1; }
-  .split-panel .splitter {
-    z-index: 1000;
-    position: absolute;
-    box-sizing: border-box; }
-    .split-panel .splitter.vertical {
-      border-left: #DDD solid 2px;
-      cursor: ew-resize; }
-    .split-panel .splitter.horizontal {
-      border-top: #DDD solid 2px;
-      cursor: ns-resize; }
-    .split-panel .splitter.resize {
-      background-color: #C4E1A4; }
+  margin: 0;
+}
+.split-panel .split-panel-panel-container {
+  position: absolute;
+  overflow: hidden;
+}
+.split-panel .split-panel-panel-container .split-panel-toolbar {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 40px;
+  height: 40px;
+  z-index: 999999;
+  padding-top: 2px;
+  padding-right: 3px;
+}
+.split-panel .split-panel-panel-container .split-panel-toolbar .split-panel-toolbar-btn {
+  position: relative;
+  float: right;
+  border-radius: 50%;
+  color: #00235b;
+  background-color: #fff;
+  border: 6px solid #fff;
+  opacity: 0.75;
+  cursor: pointer;
+}
+.split-panel .split-panel-panel-container .split-panel-toolbar .split-panel-toolbar-btn:hover {
+  opacity: 1;
+}
+.split-panel .splitter {
+  z-index: 1000;
+  position: absolute;
+  box-sizing: border-box;
+}
+.split-panel .splitter.vertical {
+  border-left: #DDD solid 2px;
+  cursor: ew-resize;
+}
+.split-panel .splitter.horizontal {
+  border-top: #DDD solid 2px;
+  cursor: ns-resize;
+}
+.split-panel .splitter.resize {
+  background-color: #C4E1A4;
+}
+
+/*# sourceMappingURL=SplitPanel.css.map */
