--- a/src/client/js/Controls/styles/ColorPicker.css
+++ b/src/client/js/Controls/styles/ColorPicker.css
@@ -5,8 +5,13 @@
  */
 .sp-container .sp-palette .sp-thumb-el {
   width: 13px;
-  height: 13px; }
+  height: 13px;
+}
 .sp-container .sp-thumb-active .sp-thumb-inner {
-  background-size: 15px 15px; }
+  background-size: 15px 15px;
+}
 .sp-container .sp-clear {
-  cursor: pointer; }
+  cursor: pointer;
+}
+
+/*# sourceMappingURL=ColorPicker.css.map */
