--- a/src/client/js/Loader/styles/LoaderCircles.css
+++ b/src/client/js/Loader/styles/LoaderCircles.css
@@ -7,7 +7,8 @@
   margin: 0;
   /*background-color: $loader-bg-background-color;
   opacity: $loader-bg-opacity;*/
-  z-index: 12000; }
+  z-index: 12000;
+}
 
 .loader-container {
   position: absolute;
@@ -19,120 +20,142 @@
   top: 50%;
   left: 50%;
   margin: -43px 0 0 -43px;
-  background-color: transparent;
-  opacity: 1; }
-  .loader-container .circle-o {
-    background-color: transparent;
-    border: 5px solid rgba(82, 168, 236, 0.9);
-    opacity: 0.9;
-    border-right: 5px solid transparent;
-    border-left: 5px solid transparent;
-    border-radius: 50px;
-    box-shadow: 0 0 36px #52a8ec;
-    width: 50px;
-    height: 50px;
-    margin: 12px auto;
-    -moz-animation: spinPulse 1s infinite linear;
-    -webkit-animation: spinPulse 1s infinite linear;
-    -o-animation: spinPulse 1s infinite linear;
-    animation: spinPulse 1s infinite linear; }
-  .loader-container .circle-i {
-    background-color: transparent;
-    border: 5px solid rgba(82, 168, 236, 0.9);
-    opacity: 0.9;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-radius: 30px;
-    box-shadow: 0 0 15px #52a8ec;
-    width: 30px;
-    height: 30px;
-    margin: 0 auto;
-    position: relative;
-    top: -52px;
-    -moz-animation: spinoffPulse 1s infinite linear;
-    -webkit-animation: spinoffPulse 1s infinite linear;
-    -o-animation: spinoffPulse 1s infinite linear;
-    animation: spinoffPulse 1s infinite linear; }
-  .loader-container.stop .circle-o,
-  .loader-container.stop .circle-i {
-    -webkit-animation-play-state: paused;
-    -moz-animation-play-state: paused;
-    -o-animation-play-state: paused;
-    animation-play-state: paused; }
+  background-color: rgba(0, 0, 0, 0);
+  opacity: 1;
+}
+.loader-container .circle-o {
+  background-color: rgba(0, 0, 0, 0);
+  border: 5px solid rgba(82, 168, 236, 0.9);
+  opacity: 0.9;
+  border-right: 5px solid rgba(0, 0, 0, 0);
+  border-left: 5px solid rgba(0, 0, 0, 0);
+  border-radius: 50px;
+  box-shadow: 0 0 36px rgb(82, 168, 236);
+  width: 50px;
+  height: 50px;
+  margin: 12px auto;
+  -moz-animation: spinPulse 1s infinite linear;
+  -webkit-animation: spinPulse 1s infinite linear;
+  -o-animation: spinPulse 1s infinite linear;
+  animation: spinPulse 1s infinite linear;
+}
+.loader-container .circle-i {
+  background-color: rgba(0, 0, 0, 0);
+  border: 5px solid rgba(82, 168, 236, 0.9);
+  opacity: 0.9;
+  border-left: 5px solid rgba(0, 0, 0, 0);
+  border-right: 5px solid rgba(0, 0, 0, 0);
+  border-radius: 30px;
+  box-shadow: 0 0 15px rgb(82, 168, 236);
+  width: 30px;
+  height: 30px;
+  margin: 0 auto;
+  position: relative;
+  top: -52px;
+  -moz-animation: spinoffPulse 1s infinite linear;
+  -webkit-animation: spinoffPulse 1s infinite linear;
+  -o-animation: spinoffPulse 1s infinite linear;
+  animation: spinoffPulse 1s infinite linear;
+}
+.loader-container.stop .circle-o,
+.loader-container.stop .circle-i {
+  -webkit-animation-play-state: paused;
+  -moz-animation-play-state: paused;
+  -o-animation-play-state: paused;
+  animation-play-state: paused;
+}
 
 @keyframes spinPulse {
   0% {
     transform: rotate(160deg);
     opacity: 0;
-    box-shadow: 0 0 1px #52a8ec; }
-
+    box-shadow: 0 0 1px rgb(82, 168, 236);
+  }
   50% {
     transform: rotate(145deg);
-    opacity: 1; }
-
+    opacity: 1;
+  }
   100% {
     transform: rotate(-320deg);
-    opacity: 0; } }
+    opacity: 0;
+  }
+}
 @keyframes spinoffPulse {
   0% {
-    transform: rotate(0deg); }
-
+    transform: rotate(0deg);
+  }
   100% {
-    transform: rotate(360deg); } }
+    transform: rotate(360deg);
+  }
+}
 @-moz-keyframes spinPulse {
   0% {
     -moz-transform: rotate(160deg);
     opacity: 0;
-    box-shadow: 0 0 1px #52a8ec; }
-
+    box-shadow: 0 0 1px rgb(82, 168, 236);
+  }
   50% {
     -moz-transform: rotate(145deg);
-    opacity: 1; }
-
+    opacity: 1;
+  }
   100% {
     -moz-transform: rotate(-320deg);
-    opacity: 0; } }
+    opacity: 0;
+  }
+}
 @-moz-keyframes spinoffPulse {
   0% {
-    -moz-transform: rotate(0deg); }
-
+    -moz-transform: rotate(0deg);
+  }
   100% {
-    -moz-transform: rotate(360deg); } }
+    -moz-transform: rotate(360deg);
+  }
+}
 @-webkit-keyframes spinPulse {
   0% {
     -webkit-transform: rotate(160deg);
     opacity: 0;
-    box-shadow: 0 0 1px #52a8ec; }
-
+    box-shadow: 0 0 1px rgb(82, 168, 236);
+  }
   50% {
     -webkit-transform: rotate(145deg);
-    opacity: 1; }
-
+    opacity: 1;
+  }
   100% {
     -webkit-transform: rotate(-320deg);
-    opacity: 0; } }
+    opacity: 0;
+  }
+}
 @-webkit-keyframes spinoffPulse {
   0% {
-    -webkit-transform: rotate(0deg); }
-
+    -webkit-transform: rotate(0deg);
+  }
   100% {
-    -webkit-transform: rotate(360deg); } }
+    -webkit-transform: rotate(360deg);
+  }
+}
 @-o-keyframes spinPulse {
   0% {
     -o-transform: rotate(160deg);
     opacity: 0;
-    box-shadow: 0 0 1px #52a8ec; }
-
+    box-shadow: 0 0 1px rgb(82, 168, 236);
+  }
   50% {
     -o-transform: rotate(145deg);
-    opacity: 1; }
-
+    opacity: 1;
+  }
   100% {
     -o-transform: rotate(-320deg);
-    opacity: 0; } }
+    opacity: 0;
+  }
+}
 @-o-keyframes spinoffPulse {
   0% {
-    -o-transform: rotate(0deg); }
-
+    -o-transform: rotate(0deg);
+  }
   100% {
-    -o-transform: rotate(360deg); } }
+    -o-transform: rotate(360deg);
+  }
+}
+
+/*# sourceMappingURL=LoaderCircles.css.map */
