--- a/src/client/js/PanelBase/styles/PanelBaseWithHeader.css
+++ b/src/client/js/PanelBase/styles/PanelBaseWithHeader.css
@@ -1,105 +1,102 @@
 /**
- * @author rkereskenyi / https://github.com/rkereskenyi
+ * Updated to mimic VSCode Dark Mode
  */
 .panel-header-title-navigation-item {
   cursor: pointer;
-  min-width: 50px; }
-  .panel-header-title-navigation-item:hover {
-    opacity: 0.5; }
+  min-width: 50px;
+}
+.panel-header-title-navigation-item:hover {
+  opacity: 0.5;
+}
 
 .panel-base-wh {
-  box-sizing: border-box; }
-  .panel-base-wh .ro-icon {
-    display: none;
-    margin-right: 2px;
-    position: absolute;
-    top: 2px;
-    left: 2px; }
-  .panel-base-wh .panel-header {
-    background-color: #EFEFEF;
-    border-bottom: 3px solid rgba(0, 0, 0, 0);
-    white-space: nowrap; }
-    .panel-base-wh .panel-header .panel-header-title {
-      font-size: 21px;
-      line-height: 21px;
-      font-weight: 400;
-      display: inline-block;
-      margin-right: 10px;
-      margin-left: 5px;
-      white-space: nowrap;
-      margin-top: 8px; }
-    .panel-base-wh .panel-header .panel-header-toolbar .toolbar-group {
-      margin-left: 10px; }
-      .panel-base-wh .panel-header .panel-header-toolbar .toolbar-group.toolbar-group-small-margin {
-        margin-left: 2px; }
-    .panel-base-wh .panel-header .panel-header-toolbar select,
-    .panel-base-wh .panel-header .panel-header-toolbar textarea,
-    .panel-base-wh .panel-header .panel-header-toolbar input,
-    .panel-base-wh .panel-header .panel-header-toolbar .uneditable-input {
-      margin-bottom: 0; }
-    .panel-base-wh .panel-header .panel-header-toolbar .input-append,
-    .panel-base-wh .panel-header .panel-header-toolbar .input-prepend {
-      margin-bottom: 0; }
-    .panel-base-wh .panel-header .panel-header-toolbar input.no-focus-collapse:not(:focus) {
-      width: 30px; }
-    .panel-base-wh .panel-header .panel-header-toolbar li div.iCheckBox {
-      margin-left: 10px; }
-    .panel-base-wh .panel-header .panel-header-toolbar .iCheckBox {
-      top: 5px;
-      margin-left: 10px; }
-    .panel-base-wh .panel-header .panel-header-toolbar ul.dropdown-menu .iCheckBox {
-      top: 1px; }
-    .panel-base-wh .panel-header.absolute-header {
-      border-bottom-width: 0;
-      position: absolute;
-      top: 0;
-      left: 0; }
-  .panel-base-wh .panel-body {
-    position: relative;
-    background-color: #FFFFFF; }
-  .panel-base-wh .floating-title {
-    position: absolute;
-    top: 0;
-    left: 0;
-    box-shadow: 0;
-    text-shadow: 1.5px 1.5px 0 rgba(0, 0, 0, 0.15);
-    opacity: .65;
-    color: #555; }
-    .panel-base-wh .floating-title .ro-icon {
-      position: relative;
-      top: -1px;
-      left: 2px;
-      margin-right: 1.2ex; }
-    .panel-base-wh .floating-title .panel-header-title {
-      font-size: 21px;
-      line-height: 21px;
-      font-weight: 400;
-      display: inline-block;
-      margin-right: 10px;
-      margin-left: 5px;
-      white-space: nowrap;
-      margin-top: 8px; }
-      .panel-base-wh .floating-title .panel-header-title:empty {
-        display: none; }
-  .panel-base-wh.read-only .ro-icon {
-    display: inline-block; }
-  .panel-base-wh.read-only .panel-body {
-    background-color: #FBFBFB; }
-  .panel-base-wh .absolute-header {
-    border: 1px solid #d3d8df; }
-  .panel-base-wh.active-panel .panel-header {
-    border-bottom-color: #00235b;
-    background: #fff; }
-  .panel-base-wh.active-panel .floating-title {
-    opacity: 0.85;
-    color: #00235b; }
-  .panel-base-wh.active-panel .absolute-header {
-    border: 1px solid #00235b; }
-  .panel-base-wh.w-tabs .floating-title {
-    top: 30px; }
+  box-sizing: border-box;
+}
+.panel-base-wh .ro-icon {
+  display: none;
+  margin-right: 2px;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+}
+.panel-base-wh .panel-header {
+  background-color: #1e1e1e;
+  border-bottom: 3px solid rgba(0, 0, 0, 0);
+  white-space: nowrap;
+}
+.panel-base-wh .panel-header .panel-header-title {
+  font-size: 21px;
+  line-height: 21px;
+  font-weight: 400;
+  display: inline-block;
+  margin-right: 10px;
+  margin-left: 5px;
+  white-space: nowrap;
+  margin-top: 8px;
+  color: #d4d4d4;
+}
+.panel-base-wh .panel-header.absolute-header {
+  border-bottom-width: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.panel-base-wh .panel-body {
+  position: relative;
+  background-color: #252526;
+}
+.panel-base-wh .floating-title {
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-shadow: 0;
+  text-shadow: 1.5px 1.5px 0 rgba(0, 0, 0, 0.15);
+  opacity: 0.65;
+  color: #d4d4d4;
+}
+.panel-base-wh .floating-title .ro-icon {
+  position: relative;
+  top: -1px;
+  left: 2px;
+  margin-right: 1.2ex;
+}
+.panel-base-wh .floating-title .panel-header-title {
+  font-size: 21px;
+  line-height: 21px;
+  font-weight: 400;
+  display: inline-block;
+  margin-right: 10px;
+  margin-left: 5px;
+  white-space: nowrap;
+  margin-top: 8px;
+}
+.panel-base-wh.read-only .ro-icon {
+  display: inline-block;
+}
+.panel-base-wh.read-only .panel-body {
+  background-color: #2d2d2d;
+}
+.panel-base-wh .absolute-header {
+  border: 1px solid #3c3c3c;
+}
+.panel-base-wh.active-panel .panel-header {
+  border-bottom-color: #007acc;
+  background: #252526;
+}
+.panel-base-wh.active-panel .floating-title {
+  opacity: 0.85;
+  color: #4d4d4d;
+}
+.panel-base-wh.active-panel .absolute-header {
+  border: 1px solid #007acc;
+}
+.panel-base-wh.w-tabs .floating-title {
+  top: 30px;
+}
 
 .panel-base-scroll .panel-body {
-  overflow: auto; }
+  overflow: auto;
+}
 
 .side-panel .panel-base-wh {
   position: relative;
@@ -109,31 +106,39 @@
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
-  background-color: #F5F5F5; }
-  .side-panel .panel-base-wh .panel-header {
-    padding: 0 3px;
-    font-size: 0.85em;
-    background-color: #F5F5F5;
-    border-bottom: 3px solid rgba(0, 0, 0, 0); }
-    .side-panel .panel-base-wh .panel-header .ro-icon {
-      position: relative;
-      top: 0;
-      left: 0; }
-    .side-panel .panel-base-wh .panel-header .panel-header-title {
-      font-size: 0.85em;
-      line-height: 0.85em;
-      color: #999;
-      text-transform: uppercase;
-      margin-right: 0;
-      margin-left: 0; }
-    .side-panel .panel-base-wh .panel-header .panel-header-toolbar {
-      display: block; }
-  .side-panel .panel-base-wh .panel-body {
-    background-color: #F5F5F5;
-    padding: 0; }
-  .side-panel .panel-base-wh.read-only .panel-body {
-    background-color: #FBFBFB; }
-  .side-panel .panel-base-wh.active-panel .panel-header {
-    border-bottom-color: #00235b; }
+  background-color: #1e1e1e;
+}
+.side-panel .panel-base-wh .panel-header {
+  padding: 0 3px;
+  font-size: 0.85em;
+  background-color: #1e1e1e;
+  border-bottom: 3px solid rgba(0, 0, 0, 0);
+}
+.side-panel .panel-base-wh .panel-header .ro-icon {
+  position: relative;
+  top: 0;
+  left: 0;
+}
+.side-panel .panel-base-wh .panel-header .panel-header-title {
+  font-size: 0.85em;
+  line-height: 0.85em;
+  color: #999;
+  text-transform: uppercase;
+  margin-right: 0;
+  margin-left: 0;
+}
+.side-panel .panel-base-wh .panel-header .panel-header-toolbar {
+  display: block;
+}
+.side-panel .panel-base-wh .panel-body {
+  background-color: #252526;
+  padding: 0;
+}
+.side-panel .panel-base-wh.read-only .panel-body {
+  background-color: #2d2d2d;
+}
+.side-panel .panel-base-wh.active-panel .panel-header {
+  border-bottom-color: #007acc;
+}
 
 /*# sourceMappingURL=PanelBaseWithHeader.css.map */
