--- a/src/client/js/Panels/ObjectBrowser/styles/ObjectBrowserPanel.css
+++ b/src/client/js/Panels/ObjectBrowser/styles/ObjectBrowserPanel.css
@@ -7,19 +7,26 @@
   position: relative;
   margin-bottom: 0;
   height: 24px;
-  white-space: nowrap; }
-  .object-browser ul.nav.nav-tabs > li {
-    display: inline-block;
-    float: none; }
-    .object-browser ul.nav.nav-tabs > li > a {
-      padding: 5px 3px 5px 3px;
-      line-height: 13px;
-      font-size: 11px; }
-      .object-browser ul.nav.nav-tabs > li > a .tab-title {
-        white-space: nowrap;
-        display: inline-block;
-        max-width: 120px;
-        overflow: hidden;
-        text-overflow: ellipsis; }
+  white-space: nowrap;
+}
+.object-browser ul.nav.nav-tabs > li {
+  display: inline-block;
+  float: none;
+}
+.object-browser ul.nav.nav-tabs > li > a {
+  padding: 5px 3px 5px 3px;
+  line-height: 13px;
+  font-size: 11px;
+}
+.object-browser ul.nav.nav-tabs > li > a .tab-title {
+  white-space: nowrap;
+  display: inline-block;
+  max-width: 120px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .object-browser .tab-content {
-  overflow: visible; }
+  overflow: visible;
+}
+
+/*# sourceMappingURL=ObjectBrowserPanel.css.map */
