--- a/src/client/decorators/MetaDecorator/DiagramDesigner/templates/AttributeDetailsDialog.html
+++ b/src/client/decorators/MetaDecorator/DiagramDesigner/templates/AttributeDetailsDialog.html
@@ -30,6 +30,7 @@
                             <option>float</option>
                             <option>boolean</option>
                             <option>asset</option>
+                            <option>json</option>
                         </select>
                     </div>
                 </div>
@@ -99,6 +100,12 @@
                     <label class="col-sm-4 control-label">Regular Expression</label>
                     <div class="col-sm-8 controls">
                         <input type="text" id="inputRegExp" title="No leading and trailing slash needed. Modifiers not allowed!">
+                    </div>
+                </div>
+                <div class="form-group" id="pJsonSchema">
+                    <label class="col-sm-4 control-label">JSON Schema</label>
+                    <div class="col-sm-8 controls">
+                        <input type="text" id="inputJsonSchema" title="Optional JSON Schema of the field.">
                     </div>
                 </div>
                 <div class="form-group" id="pRange">
